--- a/SGISite/res/public/lib/css/text-buble.css
+++ b/SGISite/res/public/lib/css/text-buble.css
@@ -34,7 +34,7 @@ is to other properties or values in creating the effect */
     padding:15px;
     margin:1em 0 3em;
     color:#000;
-    background:#f3961c; /* default background for browsers without gradient support */
+    background:#E7E6E5; /* default background for browsers without gradient support */
     /* css3 */
     background:-webkit-gradient(linear, 0 0, 0 100%, from(#f9d835), to(#f3961c));
     background:-moz-linear-gradient(#f9d835, #f3961c);
@@ -60,7 +60,7 @@ is to other properties or values in creating the effect */
 
 .triangle-isosceles.left {
     margin-left:50px;
-    background:#f3961c;
+    background:#E7E6E5;
 }
 
 /* Variant : for right positioned triangle
@@ -108,7 +108,7 @@ is to other properties or values in creating the effect */
     left:-20px; /* value = - border-left-width - border-right-width */
     bottom:auto;
     border-width:10px 20px 10px 0;
-    border-color:transparent #f3961c;
+    border-color:transparent #E7E6E5;
 }
 
 /* Variant : right
